--- a/devspace.yaml
+++ b/devspace.yaml
@@ -37,6 +37,13 @@ deployments:
           limits:
             cpu: "200m"
             memory: "512Mi"
+        envs:
+          - name: SERVICE_NAME
+            value: "demo-app"
+          - name: INSECURE_MODE
+            value: "true"
+          - name: OTEL_EXPORTER_OTLP_ENDPOINT
+            value: opentelemetry-collector.tracing.svc.cluster.local:4317
 
 # This is a list of `dev` containers that are based on the containers created by your deployments
 dev:
